Merge JDBC config to backend (#1989)
The database connection information used to be a separate config file. 
We want to keep fewer config files.
Merging it into the backend config to make it easy to maintain. 
I will update the wiki after this PR is merged.